--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-      <link rel="stylesheet" href="style.css"> <title>Adilet Website</title>
+      <link rel="stylesheet" href="style.css"> <title>Zaduak Partfeliyo</title>
   </head>
   <body>
       <header>
         <div class="logo">
-          <img src="ChatGPT Image 15 авг. 2025 г., 00_40_43.png" alt="Zaduak Logo">
+          <img src="img/ChatGPT Image 15 авг. 2025 г., 00_40_43.png" alt="Zaduak Logo">
           <span></span>
         </div>
         
         <nav>
           <a href="#" class="active">Home</a>
-          <a href="#">Services</a>
-          <a href="#">Skills</a>
-          <a href="#">Education</a>
-          <a href="#">Experience</a>
+          <a href="Services .html" class="btn-skills" target="_blank">Services</a>
+          <a href="Skills.html" class="btn-skills" target="_blank">Skills</a>
+          <a href="Education.html" class="btn-contact" target="_blank">Education</a>
+          <a href="Experience.html" class="btn-contact" target="_blank">Experience</a>
           <a href="contact.html" class="btn-contact" target="_blank">Contact</a>
 
           </a>
@@ -27,7 +27,7 @@
 
       <section class="home">
           <div class="home-img">
-              <img src="038049ed40e7f1f8406c45ab4f37616d.jpg" alt="">
+              <img src="img/1927b857ff7e1f4bd1916e2ff638a689.jpg" alt="">
           </div>
           <div class="home-content">
               <h1>Hi,it's  <span>Ontalap Adilet</span></h1>
