--- a/contact.html
+++ b/contact.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="contact.css">
     <title>My Contacts</title>
     <style>
         body {
-            background: black;
+            background: url('img/c474eb0e0ac441251a43e338ca71f5b8.jpg') no-repeat center center fixed;
+            background-size: cover;
             color: white;
             font-family: Arial, sans-serif;
             text-align: center;
@@ -26,7 +26,7 @@
             text-decoration: underline;
         }
         .contact-box {
-            background: #1a1a1a;
+            background: rgba(26, 26, 26, 0.85);
             display: inline-block;
             padding: 20px 40px;
             border-radius: 10px;
@@ -37,9 +37,13 @@
 <body>
     <div class="contact-box">
         <h1>Contact Me</h1>
-        <p>Email: <a href="mailto:yourmail@example.com">yourmail@example.com</a></p>
-        <p>Instagram: <a href="https://instagram.com/zaduakkk" target="_blank">@zaduakkk</a></p>
+        <p>Email: <a href="mailto:lisnodayn@gmail.com">lisnodayn@gmail.com</a></p>
+        <p>Instagram: <a href="https://instagram.com/zaduakkk" target="_blank">@zaduakk</a></p>
         <p>GitHub: <a href="https://github.com/zaduakov" target="_blank">github.com/zaduakov</a></p>
+        <p>Youtube: <a href="https://www.youtube.com/@zaduak" target="_blank">https://www.youtube.com/@zaduak</a></p>
+        <p>Steam: <a href="https://steamcommunity.com/profiles/76561199109677169" target="_blank">https://steamcommunity.com/profiles/76561199109677169</a></p>
+        <p>Vk: <a href="https://vk.com/antisociaaall" target="_blank">https://vk.com/antisociaaall</a></p>
+        <p>Linkedin: <a href="https://www.linkedin.com/in/ontalap-adilet-509523351" target="_blank">https://www.linkedin.com/in/ontalap-adilet-509523351</a></p>
     </div>
 </body>
 </html>
